[tool.poetry]
name = "gearsllm"
version = "0.1.1"
description = "Lightweight library for building LLM-based control flow."
authors = ["Shreya Shankar <ss.shankar505@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gears"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.3"
jinja2 = "^3.1.2"
openai = "^0.27.8"
tenacity = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
